--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,22 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    # AWS Bedrock Services
+    App\Service\ClaudeService:
+        arguments:
+            $region: '%env(AWS_REGION)%'
+            $sonnetModel: '%env(BEDROCK_CLAUDE_SONNET_MODEL)%'
+            $haikuModel: '%env(BEDROCK_CLAUDE_HAIKU_MODEL)%'
+            $logger: '@logger'
+            $bearerToken: '%env(AWS_BEARER_TOKEN_BEDROCK)%'
+            $httpClient: '@http_client'
+        tags:
+            - { name: monolog.logger, channel: claude }
+
+    App\Service\TravelRecommenderService:
+        arguments:
+            $claudeService: '@App\Service\ClaudeService'
+            $destinationRepository: '@App\Repository\DestinationRepository'
+    
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
