--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,8 +34,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # Allow public access to login and register pages
+        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/register, roles: PUBLIC_ACCESS }
+        # Require authentication for chat functionality
+        - { path: ^/chat, roles: ROLE_USER }
 
 when@test:
     security:
