--- a/docker/nginx-ecs.conf
+++ b/docker/nginx-ecs.conf
@@ -23,7 +23,7 @@ server {
     # PHP-FPM status endpoints
     location ~ ^/(fpm-status|fpm-ping)$ {
         access_log off;
-        fastcgi_pass app:9000;
+        fastcgi_pass localhost:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
@@ -41,7 +41,7 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass app:9000;
+        fastcgi_pass localhost:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
