--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,9 @@
         "symfony": {
             "allow-contrib": false,
             "require": "7.3.*"
+        },
+        "runtime": {
+            "disable_dotenv": true
         }
     },
     "require-dev": {
