--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+    "name": "travelbot",
+    "version": "0.1.0",
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
