feat: implement vector-enabled AI travel search system
- Add pgvector support with Doctrine integration for vector operations
- Create comprehensive entity system (Resort, Amenity, ResortCategory) with vector embeddings
- Refactor AI services architecture into modular structure:
  - BedrockClientFactory for shared AWS client management
  - ClaudeService for text generation (relocated to AI/Providers)
  - TitanEmbeddingsService for vector embeddings with caching
  - AIService facade for unified AI capabilities access
- Implement DestinationGenerator with 30+ countries and realistic data pools
- Add vector similarity search capabilities in entity repositories
- Configure Doctrine with vector types and DQL functions (COSINE_SIMILARITY, etc.)
- Update entity relationships with proper bidirectional collections
- Enable pgvector extension via database migration
- Enhance Dockerfile with production environment variable for dotenv control

This establishes the foundation for AI-powered semantic search and travel recommendations.

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -8,6 +8,12 @@ doctrine:
 
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
+        
+        # pgvector support
+        types:
+            vector: Partitech\DoctrinePgVector\Type\VectorType
+        mapping_types:
+            vector: vector
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
@@ -15,6 +21,13 @@ doctrine:
         validate_xml_mapping: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
+        
+        # Vector DQL functions
+        dql:
+            string_functions:
+                COSINE_SIMILARITY: Partitech\DoctrinePgVector\Query\CosineSimilarity
+                INNER_PRODUCT: Partitech\DoctrinePgVector\Query\InnerProduct
+                DISTANCE: Partitech\DoctrinePgVector\Query\Distance
         mappings:
             App:
                 type: attribute
