feat: implement Doctrine middleware to ignore pgvector HNSW indexes
Add custom Doctrine DBAL middleware that prevents schema validation errors
when using pgvector HNSW indexes. The middleware filters out custom vector
indexes during schema operations, allowing safe use of doctrine:schema:validate
and doctrine:schema:update without risking deletion of performance-critical
HNSW indexes.

Components:
- PostgreSQLPlatformMiddleware: Entry point with @AsMiddleware attribute
- PostgreSQLPlatformDriver: Driver middleware implementation
- PostgreSQLPlatform: Custom platform with schema manager factory
- PostgreSQLSchemaManager: Filters out specified HNSW indexes

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -9,6 +9,9 @@ doctrine:
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
         
+        # Use our custom platform as the schema manager factory
+        schema_manager_factory: App\Doctrine\Platform\PostgreSQLPlatform
+        
         # pgvector support
         types:
             vector: Partitech\DoctrinePgVector\Type\VectorType
