--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -12,6 +12,20 @@ framework:
                 retry_strategy:
                     max_retries: 3
                     multiplier: 2
+            
+            # Dedicated transport for embedding generation with AWS rate limiting
+            embeddings:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                options:
+                    use_notify: true
+                    check_delayed_interval: 60000
+                    queue_name: embeddings
+                retry_strategy:
+                    max_retries: 5
+                    multiplier: 2
+                    delay: 2000
+                    max_delay: 30000
+                    
             failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
 
@@ -24,6 +38,9 @@ framework:
             Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
+
+            # Route embedding messages to dedicated transport
+            App\Message\GenerateEmbeddingMessage: embeddings
 
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
